알밤 농장 웹사이트 업데이트: 새로운 페이지 추가(농장 소개, 저장 방법, 공지사항, 구매하기), 관리자 페이지 구현, CSS 스타일 개선 및 불필요한 컴포넌트 삭제. package.json 및 package-lock.json에 file-saver 및 xlsx 라이브러리 추가.

--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "next": "15.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "xlsx": "^0.18.5",
+    "file-saver": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/file-saver": "^2.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.0.0",
     "typescript": "^5"
