웹사이트 개선 및 배포 설정 추가: README.md에 프로젝트 소개 및 배포 방법 추가, package.json에 배포 스크립트 추가, Firebase 배포를 위한 GitHub Actions 워크플로우 파일 생성. CSS 스타일 수정 및 레이아웃 개선으로 사용자 경험 향상.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "echo '❌ 로컬 배포가 금지되었습니다. GitHub에 커밋하고 sync하여 자동 배포를 사용하세요.' && exit 1"
   },
   "dependencies": {
     "next": "15.0.0",
