Firestore 규칙 및 인덱스 설정 추가: Firestore 데이터베이스에 대한 보안 규칙을 정의하고, 주문 컬렉션에 대한 인덱스를 설정하여 쿼리 성능을 향상시킴. AuthContext에서 Firestore 연결 테스트 및 타임아웃 처리 로직을 추가하여 안정성을 높임.

--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,9 @@
 {
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "apphosting": [
-    {
-      "backendId": "albam",
-      "rootDir": "y",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "functions"
-      ]
-    },
     {
       "backendId": "albam",
       "rootDir": "/",
