환경 변수 및 Firestore 설정 변경: Firebase 관련 환경 변수를 새로운 프로젝트에 맞게 업데이트하고, Firestore 규칙을 수정하여 관리자 권한 확인 로직을 추가함. 관리자 이메일 관리 기능을 구현하여 이메일 목록을 Firestore에서 동적으로 관리할 수 있도록 개선함. 또한, 관리자 로그인 및 세션 관리 로직을 최적화하여 사용자 경험을 향상시킴.

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -15,37 +15,37 @@ env:
   # See https://firebase.google.com/docs/app-hosting/configure#user-defined-environment
   
   - variable: NEXT_PUBLIC_FIREBASE_API_KEY
-    value: AIzaSyC_UBILTyP5hLYszfcwBws_GuHTUWaY3hI
+    value: AIzaSyB875pSZMX_SprhkbB24W7E8WZUuk_NJME
     availability:
       - BUILD
       - RUNTIME
 
   - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
-    value: albam-bb07e.firebaseapp.com
+    value: bamshop-ce59b.firebaseapp.com
     availability:
       - BUILD
       - RUNTIME
 
   - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
-    value: albam-bb07e
+    value: bamshop-ce59b
     availability:
       - BUILD
       - RUNTIME
 
   - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
-    value: albam-bb07e.firebasestorage.app
+    value: bamshop-ce59b.firebasestorage.app
     availability:
       - BUILD
       - RUNTIME
 
   - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
-    value: "214464229053"
+    value: "785228145441"
     availability:
       - BUILD
       - RUNTIME
 
   - variable: NEXT_PUBLIC_FIREBASE_APP_ID
-    value: 1:214464229053:web:b2cd7266cdcce7aa8851d4
+    value: 1:785228145441:web:e8ac6a0c36061f87851460
     availability:
       - BUILD
       - RUNTIME
